<resources>
    <string name="app_name">Quiz</string>
    <string name="button_true">Prawda</string>
    <string name="button_false">Fałsz</string>
    <string name="button_next">Następne</string>

    <string name="q_language">Aplikacje Android są tworzone w języku Kotlin lub Java</string>
    <string name="q_process">Każdy proces w systemie Android jest uruchamiany na jednej głównej maszynie wirutalnej</string>
    <string name="q_components">Domyślnie każda aplikacja w systemie Android ma dostęp do wszystkich komponentów</string>
    <string name="q_resumed_state">Resumed to stan w którym activity jest w przednim planie</string>
    <string name="q_on_pause">onPause() to metoda wywoływana w przypadku, gdy użytkownik opuszcza daną aktywność</string>
    <string name="q_fragment">Fragment to modularny wycinek Activity posiadający własny cykl życia niezależny od nadrzędnego Activity</string>
    <string name="q_service">Domyślnie serwis działa w głównym wątku procesu w którym został uruchomiony</string>
    <string name="q_bound_service">Bound Service działa przez nieokreślony czas, nawet jeśli komponent, który go uruchomił zostanie usunięty</string>
    <string name="q_content_provider">Connent Provider to komponent odpowiadający za powiadomienia</string>
    <string name="q_broadcast_reciever">Za pośrednictwem komponentu Broadcast Reciever inne aplikacje mogą odczytywać i modyfikować przechowywane dane</string>

    <string name="correct_answer">Poprawna odpowiedź!</string>
    <string name="incorrect_answer">Niepoprawna odpowiedź.</string>

    <string name="answer_text">Czy na pewno chcesz zobaczyć odpowiedź?</string>
    <string name="button_answer">Pokaż odpowiedź</string>
    <string name="button_prompt">Podpowiedź</string>
    <string name="answer_was_shown">Odpowiedź była już wyświetlona!</string>


    <string name="on_create">Wywołana została metoda cyklu życia: onCreate</string>
    <string name="on_start">Wywołana została metoda cyklu życia: onStart</string>
    <string name="on_resume">Wywołana została metoda cyklu życia: onResume</string>
    <string name="on_destroy">Wywołana została metoda cyklu życia: onDestroy</string>
    <string name="on_stop">Wywołana została metoda cyklu życia: onStop</string>
    <string name="on_pause">Wywołana została metoda cyklu życia: onPause</string>
    <string name="on_save_instance_state">Wywołana została metoda: onSaveInstanceState</string>

    <string name="button_play_again">Spróbuj jeszcze raz</string>
    <string name="summary">Wyniki: </string>
    <string name="correct_answers_info">Poprawne odpowiedzi: </string>
    <string name="incorrect_answers_info">Niepoprawne odpowiedzi: </string>
    <string name="checked_answers_info">Użyte podpowiedzi: </string>
    <string name="ommited_questions_info">Pominięte pytania: </string>
</resources>