<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/app_name"
        android:background="@color/purple"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/question_nr_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World!"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:padding="20dp"/>
        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hello World!"
            android:textSize="20sp"
            android:padding="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <Button
                android:id="@+id/true_button"
                android:layout_width="wrap_content"
                android:backgroundTint="@color/green"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="20dp"
                android:text="@string/button_true"
                />

            <Button
                android:id="@+id/false_button"
                android:backgroundTint="@color/red"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_false" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <Button
                android:id="@+id/prompt_button"
                android:textSize="18sp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="20dp"
                android:layout_width="wrap_content"
                android:backgroundTint="@color/purple"
                android:layout_height="wrap_content"
                android:text="@string/button_prompt" />
            <Button
                android:id="@+id/next_button"
                android:layout_marginTop="3dp"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:backgroundTint="@color/blue"
                android:layout_height="wrap_content"
                android:text="@string/button_next" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>