<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".PromptActivity">
    <TextView
        android:id="@+id/header_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/app_name"
        android:background="@color/purple"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/question_answer_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_text"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:padding="15dp"
            android:gravity="center"/>
        <Button
            android:id="@+id/button_answer"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:backgroundTint="@color/purple"
            android:layout_height="wrap_content"
            android:text="@string/button_answer" />
        <TextView
            android:id="@+id/answer_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Odpowiedź"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:padding="15dp"/>
    </LinearLayout>

</LinearLayout>