<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".SummaryActivity">
    <TextView
        android:id="@+id/header_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/app_name"
        android:background="@color/purple"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/summary_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:padding="10dp"
            android:text="@string/summary"
            android:gravity="center"/>
        <TextView
            android:id="@+id/correct_answers_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/green"
            android:padding="8dp"
            android:background="@color/white"
            tools:text="Summary"
            android:layout_gravity="left"
            />
        <TextView
            android:id="@+id/incorrect_answers_text_view"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:padding="8dp"
            tools:text="Summary"
            />
        <TextView
            android:id="@+id/checked_answers_text_view"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/orange"
            android:padding="8dp"
            tools:text="Summary"
            />
        <TextView
            android:id="@+id/ommited_questions_text_view"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/blue"
            android:padding="8dp"
            tools:text="Summary"
            />
        <Button
            android:id="@+id/play_again_button"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:backgroundTint="@color/purple"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/button_play_again" />
    </LinearLayout>
</LinearLayout>